update setup script

--- a/Training/MCX2024_1C_mcx_command_line.ipynb
+++ b/Training/MCX2024_1C_mcx_command_line.ipynb
@@ -58,9 +58,9 @@
       "cell_type": "markdown",
       "source": [
         "![Workshop Logo](https://mcx.space/wiki/upload/mcx24_logo.png)\n",
-        "# MCX Training Workshop 2024 - Day 1, Session 1.C\n",
+        "# MCX Training Workshop 2024 - Day 1, Session 1C\n",
         "\n",
-        "## Session 1.C: A Tutorial on Running MCX in Command-line Mode\n",
+        "## Session 1C: A Tutorial on Running MCX in Command-line Mode\n",
         "\n"
       ],
       "metadata": {
@@ -91,34 +91,33 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8QsyOOBgAxfA",
-        "cellView": "form"
+        "id": "8QsyOOBgAxfA"
       },
       "outputs": [],
       "source": [
-        "#@title <font color='orange'>Init 1: Initial setup of environment for running MCXLAB (run the below section once)</font>\n",
+        "#@title Init 1: Initial setup of environment for running MCXLAB (run the below section once)\n",
         "\n",
         "# install octave and oct2py\n",
-        "! sudo apt-get update && sudo apt-get install octave jq libpocl2 pocl-opencl-icd    # install octave (a free matlab clone)\n",
-        "! pip install oct2py jdata bjdata matplotlib   # install oct2py, jdata, bjdata and matplotlib Python modules\n",
+        "! apt-get update && apt-get install octave jq libpocl2 pocl-opencl-icd libnvidia-compute-535   # install octave (a free matlab clone), jq and OpenCL runtimes\n",
+        "! python3 -m pip install oct2py jdata bjdata matplotlib   # install oct2py, jdata, bjdata and matplotlib Python modules\n",
         "#!apt-get install nvidia-opencl-icd-384        # optional: install nvidia OpenCL(+2min), needed for mmc/mmclab demos later\n",
         "\n",
         "# add octave support to colab notebook\n",
         "%load_ext oct2py.ipython\n",
         "\n",
-        "# download and unzip mcxlab\n",
-        "! rm -rf mcxlab*\n",
-        "! wget https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip  # download MCX suite\n",
+        "# download and unzip MCXStudio\n",
+        "! rm -rf MCXStudio*\n",
+        "! curl https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip -O MCXStudio-linux-x86_64-nightlybuild.zip # download MCX suite\n",
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /usr/local/bin\n",
-        "! cp -a $PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex $PWD/MCXStudio/MATLAB/zmat/\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx*\" \"$PWD\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl*\" \"$PWD\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc*\" \"$PWD\"\n",
+        "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && sudo mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv \"$PWD/mcxcl\" \"$PWD/mcx\"\n",
         "! mcx -L"
       ]
     },
@@ -141,6 +140,7 @@
         "addpath([pwd filesep 'MCXStudio/MCXSuite/mmc' filesep 'matlab']); % add path to mmc helper functions\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/iso2mesh']);               % add path to iso2mesh/jsonlab\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/brain2mesh']);             % add path to brain2mesh\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/redbird-m/matlab']);       % add path to redbird-m\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/zmat']);                   % add path to zmat for data compression\n",
         "\n",
         "if(system('which nvidia-smi'))                   % if this runtime does not have NVIDIA GPU support\n",
