--- a/Training/MCX2024_1C_mcx_command_line.ipynb
+++ b/Training/MCX2024_1C_mcx_command_line.ipynb
@@ -30,7 +30,6 @@
         "CTOQ6ZmZdMzb",
         "K4XTRTZ26dbO"
       ],
-      "toc_visible": true,
       "gpuType": "T4",
       "include_colab_link": true
     },
@@ -91,7 +90,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8QsyOOBgAxfA"
+        "id": "8QsyOOBgAxfA",
+        "collapsed": true
       },
       "outputs": [],
       "source": [
@@ -110,13 +110,13 @@
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx*\" \"$PWD\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl*\" \"$PWD\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc*\" \"$PWD\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx*\" \"/opt/bin/\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl*\" \"/opt/bin/\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc*\" \"/opt/bin/\"\n",
         "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && mv \"$PWD/mcxcl\" \"$PWD/mcx\"\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv \"/opt/bin/mcxcl\" \"/opt/bin/mcx\"\n",
         "! mcx -L"
       ]
     },
@@ -148,10 +148,25 @@
         "end"
       ],
       "metadata": {
-        "id": "IWg8T2-5SwT4"
+        "id": "IWg8T2-5SwT4",
+        "outputId": "8dbdac0b-cbfd-41d0-cebd-36c922aa8c69",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "/opt/bin/nvidia-smi"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -176,10 +191,350 @@
         "unix('mcx -L')        % use -L flag to list GPU in the command line"
       ],
       "metadata": {
-        "id": "LnrnJOcJsQzW"
+        "id": "LnrnJOcJsQzW",
+        "outputId": "026db68e-5db9-444d-e9f6-99a061f26b8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 607
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "'mcx' is a function from the file /content/MCXStudio/MATLAB/mcxlab/mcx.mex"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "'s2m' is a function from the file /content/MCXStudio/MATLAB/iso2mesh/s2m.m"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "'zipmat' is a function from the file /content/MCXStudio/MATLAB/zmat/zipmat.mex"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "=============================   GPU Information  ================================"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Device 1 of 1:\t\tTesla T4"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Compute Capability:\t7.5"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Global Memory:\t\t15835660288 B"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Constant Memory:\t65536 B"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Shared Memory:\t\t49152 B"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Registers:\t\t65536"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Clock Speed:\t\t1.59 GHz"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Number of SMs:\t\t40"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Number of Cores:\t2560"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Auto-thread:\t\t81920"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Auto-block:\t\t64"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "ans ="
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  scalar structure containing the fields:"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    name = Tesla T4"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    id = 1"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    devcount = 1"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    major = 7"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    minor = 5"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    globalmem = 1.5836e+10"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    constmem = 65536"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    sharedmem = 49152"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    regcount = 65536"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    clock = 1590000"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    sm = 40"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    core = 2560"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    autoblock = 64"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    autothread = 81920"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "    maxgate = 0"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "sh: 1: mcx: not found"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "ans = 127"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -212,10 +567,22 @@
         "!mcx"
       ],
       "metadata": {
-        "id": "r1zYk3OOEhrE"
+        "id": "r1zYk3OOEhrE",
+        "outputId": "eff4f0d3-e066-4dfb-a1a6-1c6cf275e94e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/bash: line 1: mcx: command not found\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -232,10 +599,22 @@
         "!mcx -L"
       ],
       "metadata": {
-        "id": "uZNmMM90ctyB"
+        "id": "uZNmMM90ctyB",
+        "outputId": "81295ae8-2fda-4c9d-a2c2-824b50311931",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/bash: line 1: mcx: command not found\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
