Update setup script

--- a/Training/MCX2024_1C_mcx_command_line.ipynb
+++ b/Training/MCX2024_1C_mcx_command_line.ipynb
@@ -30,6 +30,7 @@
         "CTOQ6ZmZdMzb",
         "K4XTRTZ26dbO"
       ],
+      "toc_visible": true,
       "gpuType": "T4",
       "include_colab_link": true
     },
@@ -90,8 +91,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8QsyOOBgAxfA",
-        "collapsed": true
+        "id": "8QsyOOBgAxfA"
       },
       "outputs": [],
       "source": [
@@ -110,13 +110,13 @@
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx*\" \"/opt/bin/\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl*\" \"/opt/bin/\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc*\" \"/opt/bin/\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc\" \"/usr/local/bin\"\n",
         "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && mv \"/opt/bin/mcxcl\" \"/opt/bin/mcx\"\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv \"/usr/local/bin/mcxcl\" \"/usr/local/bin/mcx\"\n",
         "! mcx -L"
       ]
     },
@@ -148,25 +148,10 @@
         "end"
       ],
       "metadata": {
-        "id": "IWg8T2-5SwT4",
-        "outputId": "8dbdac0b-cbfd-41d0-cebd-36c922aa8c69",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "IWg8T2-5SwT4"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "/opt/bin/nvidia-smi"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -191,350 +176,10 @@
         "unix('mcx -L')        % use -L flag to list GPU in the command line"
       ],
       "metadata": {
-        "id": "LnrnJOcJsQzW",
-        "outputId": "026db68e-5db9-444d-e9f6-99a061f26b8b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 607
-        }
+        "id": "LnrnJOcJsQzW"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "'mcx' is a function from the file /content/MCXStudio/MATLAB/mcxlab/mcx.mex"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "'s2m' is a function from the file /content/MCXStudio/MATLAB/iso2mesh/s2m.m"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "'zipmat' is a function from the file /content/MCXStudio/MATLAB/zmat/zipmat.mex"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "=============================   GPU Information  ================================"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Device 1 of 1:\t\tTesla T4"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Compute Capability:\t7.5"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Global Memory:\t\t15835660288 B"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Constant Memory:\t65536 B"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Shared Memory:\t\t49152 B"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Registers:\t\t65536"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Clock Speed:\t\t1.59 GHz"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Number of SMs:\t\t40"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Number of Cores:\t2560"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Auto-thread:\t\t81920"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Auto-block:\t\t64"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "ans ="
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "  scalar structure containing the fields:"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    name = Tesla T4"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    id = 1"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    devcount = 1"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    major = 7"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    minor = 5"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    globalmem = 1.5836e+10"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    constmem = 65536"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    sharedmem = 49152"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    regcount = 65536"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    clock = 1590000"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    sm = 40"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    core = 2560"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    autoblock = 64"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    autothread = 81920"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "    maxgate = 0"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "sh: 1: mcx: not found"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "ans = 127"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -567,22 +212,10 @@
         "!mcx"
       ],
       "metadata": {
-        "id": "r1zYk3OOEhrE",
-        "outputId": "eff4f0d3-e066-4dfb-a1a6-1c6cf275e94e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "r1zYk3OOEhrE"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/bin/bash: line 1: mcx: command not found\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -599,22 +232,10 @@
         "!mcx -L"
       ],
       "metadata": {
-        "id": "uZNmMM90ctyB",
-        "outputId": "81295ae8-2fda-4c9d-a2c2-824b50311931",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "uZNmMM90ctyB"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/bin/bash: line 1: mcx: command not found\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -679,9 +300,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pPMw-ttzFZVf",
-        "outputId": "5774ac6d-0c22-4d45-f234-e257b97c59c1"
+        "outputId": "a30e4281-3d1a-4f75-9d0d-0f40df35df94"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,9 +324,9 @@
             "#Please visit our free scientific data sharing portal at \u001b[34mhttps://neurojson.io/\u001b[35m#\n",
             "# and consider sharing your public datasets in standardized JSON/JData format #\n",
             "###############################################################################\n",
-            "$Rev::d66a0a$\u001b[32mv2024.6\u001b[35m $Date::2024-06-11 18:30:04 -04$ by $Author::Qianqian Fang$\n",
+            "$Rev::f959c7$\u001b[32mv2024.6\u001b[35m $Date::2024-06-22 15:23:34 -04$ by $Author::Qianqian Fang$\n",
             "###############################################################################\n",
-            "\u001b[0m- code name: [Jumbo Jolt] compiled by nvcc [9.0] for CUDA-arch [350] on [Jun 15 2024]\n",
+            "\u001b[0m- code name: [Jumbo Jolt] compiled by nvcc [9.0] for CUDA-arch [350] on [Jun 26 2024]\n",
             "- compiled with: RNG [xorshift128+] with Seed Length [4]\n",
             "\n",
             "GPU=1 (Tesla T4) threadph=12 extra=16960 np=1000000 nthread=81920 maxgate=1 repetition=1\n",
@@ -713,14 +334,14 @@
             "requesting 1792 bytes of shared memory\n",
             "\u001b[36mlaunching MCX simulation for time window [0.00e+00ns 5.00e+00ns] ...\n",
             "\u001b[0msimulation run# 1 ... \n",
-            "kernel complete:  \t128 ms\n",
-            "retrieving fields ... \tdetected \u001b[1m\u001b[34m2997 photons\u001b[0m, total: \u001b[1m\u001b[34m2997\u001b[0m\ttransfer complete:\t138 ms\n",
+            "kernel complete:  \t129 ms\n",
+            "retrieving fields ... \tdetected \u001b[1m\u001b[34m2997 photons\u001b[0m, total: \u001b[1m\u001b[34m2997\u001b[0m\ttransfer complete:\t139 ms\n",
             "normalizing raw data ...\tsource 1, normalization factor alpha=200.000000\n",
-            "data normalization complete : 144 ms\n",
+            "data normalization complete : 145 ms\n",
             "saving data to file ...\tcompressing data [zlib] ...compression ratio: 91.0%\tafter encoding: 121.3%\n",
-            "saving data complete : 182 ms\n",
+            "saving data complete : 185 ms\n",
             "\n",
-            "compressing data [zlib] ...compression ratio: 10.9%\tafter encoding: 14.6%\n",
+            "compressing data [zlib] ...compression ratio: 11.1%\tafter encoding: 14.8%\n",
             "compressing data [zlib] ...compression ratio: 52.1%\tafter encoding: 69.5%\n",
             "simulated 1000000 photons (1000000) with 81920 threads (repeat x1)\n",
             "MCX simulation speed: \u001b[1m\u001b[34m9174.31 photon/ms\n",
