add oct2py example

--- a/Training/MCX2024_2A_iso2mesh_training.ipynb
+++ b/Training/MCX2024_2A_iso2mesh_training.ipynb
@@ -53,29 +53,26 @@
         "#@title Init 1: Initial setup of environment for running MCXLAB (run the below section once)\n",
         "\n",
         "# install octave and oct2py\n",
-        "! apt-get update && apt-get install octave octave-image jq libpocl2 pocl-opencl-icd libnvidia-compute-535   # install octave (a free matlab clone), jq and OpenCL runtimes\n",
-        "! python3 -m pip install oct2py jdata bjdata matplotlib plotly  # install oct2py, jdata, bjdata and matplotlib Python modules\n",
+        "! apt-get update && apt-get install octave octave-image jq   # install octave (a free matlab clone), jq and OpenCL runtimes\n",
+        "! pip install oct2py jdata bjdata matplotlib plotly  # install oct2py, jdata, bjdata and matplotlib Python modules\n",
         "\n",
         "# add octave support to colab notebook\n",
         "%load_ext oct2py.ipython\n",
         "\n",
-        "# download and unzip MCXStudio\n",
+        "# download and unzip mcxlab\n",
         "! rm -rf MCXStudio*\n",
-        "! curl https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip -O MCXStudio-linux-x86_64-nightlybuild.zip # download MCX suite\n",
+        "! wget https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip  # download MCX suite\n",
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx\" \"$PWD\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl\" \"$PWD\"\n",
-        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc\" \"$PWD\"\n",
-        "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
-        "\n",
-        "! mv \"$PWD/MCXStudio/MCXWorkshop2024pyPlot\" \"$PWD\"\n",
-        "! perl -pi -e 's/^plotmesh/%plotmesh/g' \"$PWD/MCXStudio/MATLAB/brain2mesh/examples/SPM_example_brain.m\"\n",
+        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /usr/local/bin\n",
+        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /usr/local/bin\n",
+        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /usr/local/bin\n",
+        "! cp -a $PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex $PWD/MCXStudio/MATLAB/zmat/\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && mv \"$PWD/mcxcl\" \"$PWD/mcx\"\n",
-        "! ./mcx -L"
+        "! [[ ! -f `which nvidia-smi` ]] && sudo mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
+        "#! mcx -L"
       ]
     },
     {
@@ -89,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "IWg8T2-5SwT4"
       },
@@ -130,42 +127,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        },
-        "id": "LnrnJOcJsQzW",
-        "outputId": "f0c973bb-a100-46bf-debe-5aedaa1a967d"
+        "id": "LnrnJOcJsQzW"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'mcx' is a function from the file /content/MCXStudio/MATLAB/mcxlab/mcx.mex"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "'s2m' is a function from the file /content/MCXStudio/MATLAB/iso2mesh/s2m.m"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "'zipmat' is a function from the file /content/MCXStudio/MATLAB/zmat/zipmat.mex"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "%%octave\n",
         "which mcx\n",
@@ -210,7 +174,9 @@
         "id": "5Z_X2Apk6kxV"
       },
       "source": [
-        "Iso2mesh offers comprehensive mesh generation, mesh processing and analysis functions, listed by groups below:\n",
+        "## Iso2Mesh functions\n",
+        "\n",
+        "Iso2Mesh offers comprehensive mesh generation, mesh processing and analysis functions, listed by groups below:\n",
         "\n",
         "##### **shortcut**:\n",
         " `v2m,v2s,s2m,s2v,m2v,sms,i2m`\n",
@@ -335,6 +301,66 @@
         "\n",
         "plotmesh(node, elem, 'x>30')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Just for fun - you can actually call Octave inside the Python environment using the `oct2py` module.\n",
+        "\n",
+        "Please see the same Is2mesh meshing code running in Python via `oct2py`.\n",
+        "\n",
+        "Be aware that the Python `oct2py` created session and Jupyter Notebook `%%octave` enviroment are not shared. They are two separate persistant Octave sessions."
+      ],
+      "metadata": {
+        "id": "ETej5_vInzK0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from oct2py import octave\n",
+        "import plotly.graph_objects as go\n",
+        "\n",
+        "# setup oct2py paths\n",
+        "octave.addpath('MCXStudio/MATLAB/iso2mesh')\n",
+        "octave.addpath('MCXStudio/MATLAB/brain2mesh')\n",
+        "\n",
+        "# call iso2mesh meshabox function via oct2py.octave\n",
+        "mesh = octave.meshabox([0,0,0], [80,40, 30], 100, nout=3)\n",
+        "\n",
+        "# return mesh results back to Python\n",
+        "node=mesh[0]\n",
+        "face=mesh[1]-1\n",
+        "\n",
+        "fig = go.Figure()\n",
+        "\n",
+        "fig.add_trace(go.Mesh3d(\n",
+        "    x=node[:, 0],\n",
+        "    y=node[:, 1],\n",
+        "    z=node[:, 2],\n",
+        "    i=face[:, 0],\n",
+        "    j=face[:, 1],\n",
+        "    k=face[:, 2],\n",
+        "    color='orange',\n",
+        "    opacity=0.7\n",
+        "))\n",
+        "fig.update_layout(xaxis_range=[0, 120])\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "E5r0kJi9jP30"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, let's create a 2-layer domain using `latticegrid` function in iso2mesh"
+      ],
+      "metadata": {
+        "id": "2rcwY8bhpj09"
+      }
     },
     {
       "cell_type": "code",
@@ -842,7 +868,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJPxMV/ZU6P9zEWI15qxcw",
+      "authorship_tag": "ABX9TyNuymTzVrdwLX9aOoRJQtaq",
       "include_colab_link": true
     },
     "kernelspec": {
